# desktop-schedule-for-SYSUer

./: .gitignore  CONTRIBUTING.md  README.md  desktop-widget.jsx  doc_to_schedule_json.py  index.html  main.jsx  package-lock.json  package.json  schedule.json.sample  schedule_converter.py  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
